fix blog, add beta messages & hide broken games

--- a/src/lib/blog/md/7-24-2025.md
+++ b/src/lib/blog/md/7-24-2025.md
@@ -1,3 +1,5 @@
-# July 23rd, 2025
+# July 24th, 2025
 
-The site has been slightly rebuilt, all the games should be working again! Let me know if something is broken.
+The site has been slightly rebuilt, I am working on getting all of the games working again!
+
+The games list is a bit small while I work on it. You should be able to play everything really soon.
